# cyrene-temp

./: .dockerignore  .gitignore  LICENSE  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: learning_dashboard.py
backend/src/: main.py
backend/src/agents/: analyst.py  anaxa.py  castorice.py  cerydra.py  cyrene.py  demiurge.py  hyacinthia.py  hysilens.py  irontomb.py  lola.py  mydei.py  phainon.py  phainon_adapter.py  ruan_mei.py  stelle.py  stelle_adapter.py  stelle_runner.py  tribbie.py  tribbie_adapter.py
backend/src/auth/: __init__.py  acl.py  cf_access.py  middleware.py
backend/src/core/: config.py  events.py
backend/src/db/: local.py  supabase_client.py  vortex.py
backend/src/evals/: __main__.py
backend/src/mcp_bridge/: __init__.py  claude_cli.py  cyrene_server.py  irontomb_server.py  server.py  stelle_server.py
backend/src/models/: agent.py  eval.py  post.py  user.py
backend/src/services/: cross_client_learning.py  engager_fetcher.py  job_manager.py  linkedin_bank.py  ordinal_sync.py  series_engine.py  temporal_orchestrator.py  topic_velocity.py  workspace_manager.py  writer_productivity.py
backend/src/usage/: __init__.py  context.py  instrumentation.py  pricing.py  recorder.py
backend/src/utils/: adaptive_config.py  alignment_scorer.py  cache.py  context_budget.py  correlation_analyzer.py  cross_client.py  draft_scorer.py  fetch_url.py  icp_scorer.py  langfuse_tracing.py  post_embeddings.py  prediction_tracker.py  url_protection.py
backend/tests/unit/: test_context_budget.py  test_events.py  test_url_protection.py
(+59 files in other folders)
